// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingsSectionMain Initial rendering With a collection with contents renders a row per bookings 1`] = `
<DocumentFragment>
  <div
    class="bookingsSection"
  >
    <div
      class="title"
    >
      <span
        class="mdc-typography--headline5"
      >
        Booked Times
      </span>
    </div>
    <div>
      <hr />
    </div>
    <div
      class="bookingsTable mdc-data-table rmwc-data-table--sticky-rows rmwc-data-table--sticky-rows-1"
    >
      <table
        class="mdc-data-table__table"
      >
        <thead
          class="rmwc-data-table__head"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__header-row"
          >
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Advisor ID
            </th>
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Student Name
            </th>
            <th
              class="rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Date/Time
            </th>
          </tr>
        </thead>
        <tbody
          class="mdc-data-table__content"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__row"
          >
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              12321
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              Phil
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              12/20/2012 12:20 AM
            </td>
          </tr>
          <tr
            class="rmwc-data-table__row mdc-data-table__row"
          >
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              32123
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              Linda
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              12/20/2012 12:20 PM
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BookingsSectionMain Initial rendering With a null collection renders a row indicating no bookings 1`] = `
<DocumentFragment>
  <div
    class="bookingsSection"
  >
    <div
      class="title"
    >
      <span
        class="mdc-typography--headline5"
      >
        Booked Times
      </span>
    </div>
    <div>
      <hr />
    </div>
    <div
      class="bookingsTable mdc-data-table rmwc-data-table--sticky-rows rmwc-data-table--sticky-rows-1"
    >
      <table
        class="mdc-data-table__table"
      >
        <thead
          class="rmwc-data-table__head"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__header-row"
          >
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Advisor ID
            </th>
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Student Name
            </th>
            <th
              class="rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Date/Time
            </th>
          </tr>
        </thead>
        <tbody
          class="mdc-data-table__content"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__row"
          >
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              No Bookings
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BookingsSectionMain Initial rendering With an empty collection renders a row indicating no bookings 1`] = `
<DocumentFragment>
  <div
    class="bookingsSection"
  >
    <div
      class="title"
    >
      <span
        class="mdc-typography--headline5"
      >
        Booked Times
      </span>
    </div>
    <div>
      <hr />
    </div>
    <div
      class="bookingsTable mdc-data-table rmwc-data-table--sticky-rows rmwc-data-table--sticky-rows-1"
    >
      <table
        class="mdc-data-table__table"
      >
        <thead
          class="rmwc-data-table__head"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__header-row"
          >
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Advisor ID
            </th>
            <th
              class="tableColumnConstrained rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Student Name
            </th>
            <th
              class="rmwc-data-table__cell mdc-data-table__header-cell"
              role="columnheader"
              scope="col"
            >
              Date/Time
            </th>
          </tr>
        </thead>
        <tbody
          class="mdc-data-table__content"
        >
          <tr
            class="rmwc-data-table__row mdc-data-table__row"
          >
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            >
              No Bookings
            </td>
            <td
              class="mdc-data-table__cell rmwc-data-table__cell"
            />
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BookingsSectionMain Initial rendering With an undefined collection renders a row indicating no bookings 1`] = `
<DocumentFragment>
  <div
    class="bookingsSection"
  >
    <div
      class="title"
    >
      <span
        class="mdc-typography--headline5"
      >
        Booked Times
      </span>
    </div>
    <nav
      aria-label="Progress Bar"
      aria-valuemax="1"
      aria-valuemin="0"
      class="mdc-linear-progress mdc-linear-progress--indeterminate"
      role="progressbar"
    >
      <div
        class="mdc-linear-progress__buffering-dots"
      />
      <div
        class="mdc-linear-progress__buffer"
        style="transform: scaleX(1);"
      />
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__primary-bar"
        style="transform: scaleX(1);"
      >
        <div
          class="mdc-linear-progress__bar-inner"
        />
      </div>
      <div
        class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar"
      >
        <div
          class="mdc-linear-progress__bar-inner"
        />
      </div>
    </nav>
  </div>
</DocumentFragment>
`;
